<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calendar_bg"
    tools:context=".ui.activity.MainActivity">

    <include android:id="@+id/top"
        layout="@layout/include_top"/>

    <ImageView
        android:id="@+id/arrows_left"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_arrows_left"
        app:layout_constraintBottom_toBottomOf="@+id/tv_month_year"
        app:layout_constraintEnd_toStartOf="@+id/tv_month_year"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_month_year" />

    <TextView
        android:id="@+id/tv_month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_calendar_tv_month_year"
        android:paddingBottom="4dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:paddingTop="4dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top"
        tools:text="八月 2018" />

    <ImageView
        android:id="@+id/arrows_right"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_arrows_right"
        app:layout_constraintBottom_toBottomOf="@+id/tv_month_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/tv_month_year"
        app:layout_constraintTop_toTopOf="@+id/tv_month_year" />

    <com.haibin.calendarview.CalendarLayout
        android:id="@+id/calendarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:calendar_content_view_id="@+id/rv_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_month_year">

        <com.haibin.calendarview.CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:calendar_height="35dp"
            app:current_month_text_color="@color/calendar_workday"
            app:day_text_size="16sp"
            app:min_year="2010"
            app:month_view="@string/month_view_path"
            app:month_view_show_mode="mode_fix"
            app:other_month_text_color="@color/calendar_weekend"
            app:week_bar_view="@string/week_bar_view_path"
            app:week_start_with="mon"
            app:week_view="@string/week_view_path"
            app:year_view_day_text_color="@color/calendar_workday"
            app:year_view_day_text_size="9sp"
            app:year_view_month_text_color="@color/calendar_weekend"
            app:year_view_month_text_size="20sp"
            app:year_view_scheme_color="@color/calendar_select" />

        <com.jayboat.reddo.ui.widget.NotAnnoyRecycleView
            android:id="@+id/rv_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/calendar_bg" />
    </com.haibin.calendarview.CalendarLayout>

    <include layout="@layout/include_bottom"/>

</android.support.constraint.ConstraintLayout>